# yadet

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: .gitignore
examples/mssql_adventure_works/: README.md  main.py
examples/mssql_adventure_works/config/AdventureWorks/: project_config.json
yadet/batch/: __init__.py  batch_run.py
yadet/config/: __init__.py  project.py  table.py
yadet/engine/: __init__.py
yadet/engine/source/: __init__.py  base.py  mssql.py
yadet/helpers/: __init__.py  base.py  json.py  parser.py  sql.py
yadet/interface/: __init__.py  extract_transfer.py  source.py  target.py
yadet/objects/: __init__.py  base.py
