[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "yadet"
version = "1.4.0"
authors = [
  { name="Robert Goss", email="robertgoss07@gmail.com" }
]
description = "A simple and effective Python data extraction tool for getting batch data exports and store in a simple format."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {text = "MIT License"}

[project.urls]
"Homepage" = "https://github.com/robbitt07/yadet"
"Bug Tracker" = "https://github.com/robbitt07/yadet/issues"